# ADRV9026_Setup

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
config/: default.toml
docs/: api_notes.md  development_debugging.md
notebooks/: README.md  dual_band_sweep.ipynb  dual_band_tx_capture.ipynb  single_band_sweep.ipynb  single_band_tx_capture.ipynb
scripts/: agc_test_dual.py  agc_test_single.py  agc_validate.py  hw_smoke.py  orx_gain_sweep.py  sampling.py  status.py
src/adrvtrx/: __init__.py  _clr.py  _enums.py  align.py  bands.py  capture.py  cli.py  config.py  experiment.py  gain.py  profile.py  radio.py  sweep.py  sweep_plan.py  transmit.py  waveform.py
tests/: conftest.py  test_align.py  test_config.py  test_gain.py  test_gain_autolevel.py  test_hardware.py  test_profile.py  test_radio_safety.py  test_sweep.py  test_sweep_plan.py  test_transmit_capture.py  test_waveform.py
